added login and signup

--- a/project/app/templates/index.html
+++ b/project/app/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Inicio de sesion - INE
+    INE México - Instituto Nacional Electoral 
 {% endblock %}
 
 {% block content %}
@@ -336,7 +336,7 @@
                 3. Acude con la documentación requerida<br>
                 4. Recibe tu credencial provisional<br>
                 5. La credencial definitiva llegará a tu domicilio</p>
-                <a class="btn" href="#">Seguir con el tramite</a>
+                <a class="btn" href="{% url 'login' %}">Seguir con el tramite</a>
             </div>
         </div>
     </div>
