--- a/project/app/templates/signup.html
+++ b/project/app/templates/signup.html
@@ -11,8 +11,8 @@
     <input type="text" name="nombre_completo" placeholder="Ingresa tu nombre completo">
     <input type="text" name="curp" placeholder="Ingresa tu curp">
     <input type="email" placeholder="Ingresa tu correo" name="email">
-    <input type="password" placeholder="Ingresa tu corntrasena" name="password">
-    <input type="password" placeholder="Confirma tu corntrasena" name="confirm">
+    <input type="password" placeholder="Ingresa tu contraseña" name="password">
+    <input type="password" placeholder="Confirma tu contraseña" name="confirm">
     <button type="submit">Registrarse</button>
     {% for message in messages %}<p>{{ message }}</p>{% endfor %}
 </form>
